update syling to prevent unneeded scrollbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,6 @@ body {
   margin: 0;
 }
 
-html,
-body {
+html {
   height: 100%;
 }
